# moingui

moingui/: CMakeLists.txt  main.qml  package.xml
moingui/include/: ROSImageProvider.hpp  VideoStreamNode.hpp
moingui/src/: ROSImageProvider.cpp  VideoStreamNode.cpp  main.cpp
